// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify validateFormWithMongoUpdate: Known Nested Object Field gets correctly Validated 1`] = `
Object {
  "$inc": Object {
    "myObj.my.nested.number": 654,
  },
}
`;

exports[`Verify validateFormWithMongoUpdate: Known Regular Object Field gets correctly Validated 1`] = `
Object {
  "$inc": Object {
    "myObj.myNum": 23,
  },
}
`;

exports[`Verify validateFormWithMongoUpdate: Successfully Validate Number Object 1`] = `
Object {
  "myNum": 432,
}
`;

exports[`Verify validateFormWithMongoUpdate: Successfully Validate Number Object 2`] = `
Object {
  "my": Object {
    "nested": Object {
      "number": 54323,
    },
  },
}
`;

exports[`Verify validateFormWithMongoUpdate: Successfully Validate Special Query Object 1`] = `
Object {
  "$inc": Object {
    "myNum": 234,
  },
}
`;

exports[`Verify validateFormWithMongoUpdate: Unkonwn Key found in Special Operator 1`] = `"no valid keys in $inc"`;
